@@ -7,6 +7,7 @@ package rover.Model;
 import project.Point;
 
 import java.util.LinkedList;
+import java.util.List;
 
 /************************************************************/
 /**
@@ -14,35 +15,67 @@ import java.util.LinkedList;
  */
 
 public class Mission {
-	private LinkedList<Point> pointsToReach;
-	private LinkedList<Point> pointsReached;
+	/**
+	 * 
+	 */
+	public List<Point> pointsReached;
+	/**
+	 * 
+	 */
+	public List<Point> pointsToReach;
 
 	
-	public Mission(LinkedList<Point> pointsToReach){
-		this.pointsToReach = pointsToReach;
+	/**
+	 * @param pointsToReach  
+	 */
+	public Mission(List<Point> points){
+		this.pointsToReach = points;
 		this.pointsReached = new LinkedList<Point>();
 	}
 	
-	public LinkedList<Point> getPointsToReach(){
+	/**
+	 * 
+	 * @return 
+	 */
+	public List<Point> getPointsToReach() {
 		return this.pointsToReach;
 	}
-	
-	public LinkedList<Point> getPointsReached(){
+
+	/**
+	 * 
+	 * @return 
+	 */
+	public List<Point> getPointsReached() {
 		return this.pointsReached;
 	}
-	
-	public void pointReached(){
+
+	/**
+	 * 
+	 * @return 
+	 */
+	public void pointReached() {
 		if(!pointsToReach.isEmpty()) {
-			pointsReached.add(pointsToReach.removeFirst());
+			pointsReached.add(pointsToReach.remove(0));
 		}
 	}
-	
+
+	/**
+	 * 
+	 * @return 
+	 */
 	public Point getNextPoint() {
 		if(!pointsToReach.isEmpty()) {
-			return pointsToReach.getFirst();
+			return pointsToReach.get(0);
 		}
 		else {
 			return null;
 		}
+	}
+
+	/**
+	 * 
+	 * @param pointsToReach 
+	 */
+	public void Mission(List<Point> pointsToReach) {
 	}
 };
